--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -5,6 +5,27 @@ title: 🏡 Home
 hide_title: true
 ---
 
+import { TopBanner } from "@site/src/components/Sponsors/TopBanner";
+
+<TopBanner
+  items={[
+    {
+      imgSrc: "/ads/pipelines-banner.png",
+      url: "https://github.com/open-webui/pipelines",
+      name: "Open WebUI Pipelines",
+      description:
+        "Pipelines: Versatile, UI-Agnostic OpenAI-Compatible Plugin Framework",
+    },
+    {
+      imgSrc: "/ads/placeholder.png",
+      url: "https://github.com/sponsors/tjbck",
+      name: "Open WebUI",
+      description:
+        "The top banner spot is reserved for only two Enterprise Diamond sponsors on a first-come, first-served basis",
+    },
+  ]}
+/>
+
 # Open WebUI
 
 **Open WebUI is an extensible, feature-rich, and user-friendly self-hosted WebUI designed to operate entirely offline.** It supports various LLM runners, including Ollama and OpenAI-compatible APIs.
