--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -11,6 +11,7 @@ import { TopBanner } from "@site/src/components/Sponsors/TopBanner";
   items={[
     {
       imgSrc: "/ads/pipelines-banner.png",
+      mobileImgSrc: "/ads/pipelines-banner-mobile.png",
       url: "https://github.com/open-webui/pipelines",
       name: "Open WebUI Pipelines",
       description:
@@ -18,6 +19,7 @@ import { TopBanner } from "@site/src/components/Sponsors/TopBanner";
     },
     {
       imgSrc: "/ads/placeholder.png",
+      mobileImgSrc: "/ads/placeholder-mobile.png",
       url: "https://github.com/sponsors/tjbck",
       name: "Open WebUI",
       description:
