doc: top banner for all index

--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -3,6 +3,10 @@ sidebar_position: 600
 title: "📋 FAQ"
 ---
 
+import { TopBanners } from "@site/src/components/TopBanners";
+
+<TopBanners />
+
 # 📋 Frequently Asked Questions
 
 ### Table of Contents
