--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -3,6 +3,10 @@ sidebar_position: 2
 title: "🚀 Getting Started"
 ---
 
+import { TopBanners } from "@site/src/components/TopBanners";
+
+<TopBanners />
+
 ## How to Install 🚀
 
 :::info **Important Note on User Roles and Privacy:**
