--- a/docs/research.mdx
+++ b/docs/research.mdx
@@ -3,6 +3,10 @@ sidebar_position: 900
 title: "🧑‍🔬 Open WebUI for Research"
 ---
 
+import { TopBanners } from "@site/src/components/TopBanners";
+
+<TopBanners />
+
 # 🧑‍🔬 Open WebUI for Research
 
 ## Interested in Using Open WebUI for Research?
