--- a/docs/roadmap.mdx
+++ b/docs/roadmap.mdx
@@ -3,6 +3,10 @@ sidebar_position: 700
 title: "🛣️ Roadmap"
 ---
 
+import { TopBanners } from "@site/src/components/TopBanners";
+
+<TopBanners />
+
 # 🎯 Our Mission
 
 Our mission is founded on the belief that AI technologies hold transformative potential for society, yet their benefits have been narrowly confined due to complex setup requirements. Recognizing this, we are dedicated to democratizing AI by developing an easy-to-install, feature-rich local WebUI that is designed to operate locally without internet access. Enabling anyone with basic technical skills to tap into the power of AI, effectively bringing its capabilities to communities far and wide.
