--- a/docs/sponsorships.mdx
+++ b/docs/sponsorships.mdx
@@ -3,6 +3,10 @@ sidebar_position: 1100
 title: "🌐 Sponsorships"
 ---
 
+import { TopBanners } from "@site/src/components/TopBanners";
+
+<TopBanners />
+
 # 🤝 Sponsorships
 
 At Open WebUI, our community always comes first. Sponsors are welcome, but they must respect our community-first approach. This philosophy guides all our sponsorship policies.
