--- a/docs/contributing.mdx
+++ b/docs/contributing.mdx
@@ -3,6 +3,10 @@ sidebar_position: 1000
 title: "🤝 Contributing"
 ---
 
+import { TopBanners } from "@site/src/components/TopBanners";
+
+<TopBanners />
+
 # Contributing to Open WebUI
 
 🚀 **Welcome, Contributors!** 🚀
