--- a/docs/features.mdx
+++ b/docs/features.mdx
@@ -3,6 +3,10 @@ sidebar_position: 3
 title: "⭐ Features"
 ---
 
+import { TopBanners } from "@site/src/components/TopBanners";
+
+<TopBanners />
+
 ## Key Features of Open WebUI ⭐
 
 - 🚀 **Effortless Setup**: Install seamlessly using Docker or Kubernetes (kubectl, kustomize or helm) for a hassle-free experience with support for both `:ollama` and `:cuda` tagged images.
