--- a/docs/troubleshooting/index.mdx
+++ b/docs/troubleshooting/index.mdx
@@ -3,6 +3,10 @@ sidebar_position: 400
 title: "🛠️ Troubleshooting"
 ---
 
+import { TopBanners } from "@site/src/components/TopBanners";
+
+<TopBanners />
+
 # Troubleshooting
 
 ## Understanding the Open WebUI Architecture
