--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -6,6 +6,7 @@ hide_title: true
 ---
 
 import { TopBanners } from "@site/src/components/TopBanners";
+import { SponsorList } from "@site/src/components/SponsorList";
 
 <TopBanners />
 
@@ -147,3 +148,9 @@ docker run --rm --volume /var/run/docker.sock:/var/run/docker.sock containrrr/wa
 In the last part of the command, replace `open-webui` with your container name if it is different.
 
 Continue with the full [getting started guide](/getting-started).
+
+## Sponsors 🙌
+
+We are incredibly grateful for the generous support of our sponsors. Their contributions help us to maintain and improve our project, ensuring we can continue to deliver quality work to our community. Thank you!
+
+<SponsorList />
