--- a/docs/team.mdx
+++ b/docs/team.mdx
@@ -9,7 +9,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 ## 🌟 Meet Our Team!
 
-Our team is led by the dedicated creator and founder, [Tim J. Baek](https://github.com/tjbck). Although Tim is currently the only official member of the team, we are incredibly fortunate to have a community of amazing contributors who find this project valuable and actively participate in its continued success.
+Our team is led by the dedicated creator and founder, [Tim J. Baek](https://github.com/tjbck). Although Tim is currently the only official member of the team, we are incredibly fortunate to have a community of **[amazing contributors](https://github.com/open-webui/open-webui/graphs/contributors)** who find this project valuable and actively participate in its continued success.
 
 ### Important Note:
 
