--- a/docs/features.mdx
+++ b/docs/features.mdx
@@ -41,6 +41,24 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 ---
 
+### 🔧 Pipelines Support
+
+- 🔧 **Pipelines Framework**: Seamlessly integrate and customize your Open WebUI experience with our modular plugin framework for enhanced customization and functionality (https://github.com/open-webui/pipelines). Easily add custom logic and integrate Python libraries, from AI agents to home automation APIs.
+
+- 🔗 **Function Calling**: Integrate function calling seamlessly through Pipelines.
+
+- ⚖️ **User Rate Limiting**: Manage API usage efficiently with user-specific rate limits.
+
+- 📊 **Usage Monitoring with Langfuse**: Track and analyze usage statistics with Langfuse integration.
+
+- 🕒 **Conversation Turn Limits**: Manage interactions better with set limits on conversation turns.
+
+- 🛡️ **Toxic Message Filtering**: Automatically filter out toxic messages to maintain a safe environment.
+
+- 📈 **OpenAI Generation Stats**: Access detailed generation statistics for OpenAI models.
+
+---
+
 ### 🖥️ User Experience
 
 - 🖥️ **Intuitive Interface**: Our chat interface takes inspiration from ChatGPT user interface, ensuring a user-friendly experience.
@@ -61,6 +79,8 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 💾 **Persistent Settings**: Enjoy the convenience of saved settings, stored in a config.json file for easy access and reuse.
 
+- ❓ **Quick Access to Documentation**: Access Open WebUI documentation page easily via a question mark button at the bottom right-hand side of the UI.
+
 ---
 
 ### 💬 Conversations
@@ -69,7 +89,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 🔍 **RAG Embedding Support**: Change the RAG embedding model directly in document settings, enhancing document processing. This feature supports Ollama and OpenAI models.
 
-- 🔄 **Multi-Modal Support**: Seamlessly engage with models that support multimodal interactions, including images (e.g., LLava).
+- 🔄 **Multi-Modal Support**: Seamlessly engage with models that support multi-modal interactions, including images (e.g., LLava).
 
 - 🤖 **Multiple Model Support**: Seamlessly switch between different chat models for diverse interactions.
 
@@ -79,29 +99,45 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 📜 **Prompt Preset Support**: Instantly access preset prompts using the `/` command in the chat input. Load predefined conversation starters effortlessly and expedite your interactions. Effortlessly import prompts through [Open WebUI Community](https://openwebui.com/) integration.
 
+- 📅 **Prompt Variables Support**: Variables for dynamic prompts, such as `{{CURRENT_DATE}}` and `{{USER_NAME}}`.
+
 - ⬆️ **GGUF File Model Creation**: Effortlessly create Ollama models by uploading GGUF files directly from the Web UI. Streamlined process with options to upload from your machine or download GGUF files from Hugging Face.
 
 - 🧠 **Experimental Memory Feature**: Manually input personal information you want LLMs to remember via Settings > Personalization > Memory.
 
 - 📜 **Citations in RAG Feature**: Easily track the context fed to the LLM with added citations in the RAG feature.
 
-- 🌟 **Enhanced RAG Pipeline**: With hybrid searching via `BM25`, reranking powered by `CrossEncoder`, and configurable relevance score thresholds.
+- 🌟 **Enhanced RAG Pipeline**: With hybrid searching via `BM25`, re-ranking powered by `CrossEncoder`, and configurable relevance score thresholds.
 
-- 📹 **Youtube RAG Pipeline**: Dedicated RAG pipeline for YouTube videos, enabling interaction with video transcriptions directly.
+- 📹 **YouTube RAG Pipeline**: Dedicated RAG pipeline for YouTube videos, enabling interaction with video transcriptions directly.
 
 ---
 
 ### 💻 Model Management
 
-- 🔍 **Model Selector**: Easily find and select custom models with search filter and detailed model information.
+
+- 🛠️ **Model Builder**: Build and edit all models with a persistent model builder mode.
+
+- 🏷️ **Model Tagging**: Organize models in the models workspace with tagging.
+
+- 📋 **Model Ordering**: Effortlessly organize models by dragging and dropping them into desired positions within the models workspace, reflecting it's changes in the model dropdown menu.
+
+- 🔍 **Model Dropdown**: Easily find and select your models with an included search filter and detailed model information with model tags and model descriptions.
+
+- ⚙️ **Default Model Setting**: Easily set the default model in Settings > Interface.
 
 - 📥🗑️ **Download/Delete Models**: Easily download or delete models directly from Open WebUI.
 
-- 🔄 **Seamless Integration**: Copy `ollama run {model:tag}` directly from a model's page on [Ollama library](https://ollama.com/library/) to easily select and pull models.
+- 🔄 **Seamless Integration**: Copy `ollama run {model:tag}` CLI command directly from a model's page on [Ollama library](https://ollama.com/library/) and paste it into the model dropdown to easily select and pull models.
+
+- 🗂️ **Create Ollama Modelfile**: Create a modelfile for Ollama in the Settings.
 
 - 🔄 **Update All Ollama Models**: Easily update locally installed models all at once with a convenient button, streamlining model management.
 
 - 💡 **LLM Response Insights**: View generation details for every response, including external model API insights and comprehensive local model info.
+
+- 🗂️ **Model Presets**: Create and manage model presets for both Ollama/OpenAI API.
+
 
 ---
 
@@ -119,11 +155,11 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 📜 **Chat History**: Effortlessly access and manage your conversation history.
 
-- 📬 **Archive Chats**: Effortlessly store away completed conversations with LLMs for future reference or interaction, maintaining a tidy and clutter-free chat interface while allowing for easy retrieval.
+- 📬 **Archive Chats**: Effortlessly store away completed conversations with LLMs for future reference or interaction, maintaining a tidy and clutter-free chat interface while allowing for easy retrieval, with the ability to search and export archived chats easily. You can even archive all your chats with the click of a button!
 
 - 📤📥 **Import/Export Chat History**: Seamlessly move your chat data in and out of the platform.
 
-- 📄 **Chat Download as PDF/TXT**: Easily download chats in .PDF or .txt format.
+- 📄 **Chat Download as JSON/PDF/TXT**: Easily download chats in `.json`, `.pdf`, or `.txt` format.
 
 ---
 
@@ -131,7 +167,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 🗣️ **Voice Input Support**: Engage with your model through voice interactions; enjoy the convenience of talking to your model directly. Additionally, explore the option for sending voice input automatically after 3 seconds of silence for a streamlined experience.
 
-- 👥 **'@' Model Integration**: Harness the collective intelligence of multiple models in a single chat by seamlessly switching to any acessible local or external model during conversations by using the `@` command to specify the model by name.
+- 👥 **'@' Model Integration**: Harness the collective intelligence of multiple models in a single chat by seamlessly switching to any accessible local or external model during conversations by using the `@` command to specify the model by name.
 
 - 🔊 **Configurable Text-to-Speech Endpoint**: Customize your Text-to-Speech experience with configurable OpenAI endpoints.
 
@@ -140,6 +176,8 @@ import { TopBanners } from "@site/src/components/TopBanners";
 ### 🐍 Code Execution
 
 - 🐍 **Python Code Execution**: Execute Python code locally in the browser via Pyodide with libraries like `requests`, `beautifulsoup4`, `numpy`, `pandas`, `seaborn`, `matplotlib`, `scikit-learn`, `scipy`, & `regex`.
+
+- 🌊 **Mermaid Rendering**: Create beautiful diagrams and flowcharts directly within Open WebUI.
 
 - 🚀 **Flexible, UI-Agnostic OpenAI-Compatible Pipelines (WIP)**: Seamlessly integrate and customize pipelines for efficient data processing and model training, ensuring ultimate flexibility and scalability.
 
@@ -150,6 +188,8 @@ import { TopBanners } from "@site/src/components/TopBanners";
 - ✨ **Multiple OpenAI-Compatible API Support**: Seamlessly integrate and customize various OpenAI-compatible APIs, enhancing the versatility of your chat interactions.
 
 - 🔑 **Simplified API Key Management**: Easily generate and manage secret keys to leverage Open WebUI with OpenAI libraries, streamlining integration and development.
+
+- 🌐 **HTTP Proxy Support**: Configure network settings easily using the `http_proxy` environment variable.
 
 - 🌐🔗 **External Ollama Server Connectivity**: Seamlessly link to an external Ollama server hosted on a different address by configuring the environment variable.
 
@@ -163,13 +203,15 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 ### 👑 Administration
 
-- 👑 **Super Admin Assignment**: Automatically assign the first signup as a super admin as an unchangeable role that cannot be modified by other admins.
+- 👑 **Super Admin Assignment**: Automatically assign the first sign up as a super admin as an unchangeable role that cannot be modified by other admins.
 
 - 🛡️ **Granular User Permissions**: Restrict user actions and access with customizable role-based permissions, ensuring that only authorized individuals can perform specific tasks.
 
-- 👥 **Multi-User Management**: Seamlessly manage multiple users through our intuitive admin panel with pagination, streamlining user administration and simplifying user lifecycle management.
+- 👥 **Multi-User Management**: Seamlessly manage multiple users through our intuitive admin panel with pagination, streamlining user administration and simplifying user life-cycle management.
 
-- 🔧 **Admin Panel**: Streamlined user management with options to add users directly or in bulk via CSV import, making user onboarding and management efficient.
+- 🔧 **Admin Panel**: Streamlined user management with options to add users directly or in bulk via CSV import, making user on-boarding and management efficient.
+
+- 👥 **Active Users Indicator**: Track active users count and which models are actively being used by whom.
 
 - 🔗 **Webhook Integration**: Subscribe to new user sign-up events via webhook (compatible with Discord, Google Chat and Microsoft Teams), providing real-time notifications and automation capabilities.
 
