--- a/docs/features.mdx
+++ b/docs/features.mdx
@@ -120,15 +120,15 @@ import { TopBanners } from "@site/src/components/TopBanners";
 ### 💻 Model Management
 
 
-- 🛠️ **Model Builder**: Build and edit all models with a persistent model builder mode.
+- 🛠️ **Model Builder**: Build and edit all models with a persistent model builder mode within the models workspace.
 
 - 🏷️ **Model Tagging**: Organize models in the models workspace with tagging.
 
-- 📋 **Model Ordering**: Effortlessly organize models by dragging and dropping them into desired positions within the models workspace, reflecting it's changes in the model dropdown menu.
+- 📋 **Model Selector Dropdown Ordering**: Effortlessly organize models by dragging and dropping them into desired positions within the models workspace, reflecting it's changes in the model dropdown menu.
 
-- 🔍 **Model Dropdown**: Easily find and select your models with an included search filter and detailed model information with model tags and model descriptions.
+- 🔍 **Model Selector Dropdown**: Easily find and select your models with an included search filter and detailed model information with model tags and model descriptions.
 
-- ⚙️ **Default Model Setting**: Easily set the default model in Settings > Interface.
+- ⚙️ **Default Model Setting**: Easily set the default model in `Settings` > `Interface`.
 
 - 📥🗑️ **Download/Delete Models**: Easily download or delete models directly from Open WebUI.
 
@@ -141,7 +141,6 @@ import { TopBanners } from "@site/src/components/TopBanners";
 - 💡 **LLM Response Insights**: View generation details for every response, including external model API insights and comprehensive local model info.
 
 - 🗂️ **Model Presets**: Create and manage model presets for both Ollama/OpenAI API.
-
 
 ---
 
@@ -191,7 +190,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 - 🌊 **Mermaid Rendering**: Create beautiful diagrams and flowcharts directly within Open WebUI.
 
-- 🚀 **Flexible, UI-Agnostic OpenAI-Compatible Pipelines (WIP)**: Seamlessly integrate and customize pipelines for efficient data processing and model training, ensuring ultimate flexibility and scalability.
+- 🚀 **Versatile, UI-Agnostic OpenAI-Compatible Plugin Framework**: Seamlessly integrate and customize [Open WebUI Pipelines](https://github.com/open-webui/pipelines) for efficient data processing and model training, ensuring ultimate flexibility and scalability.
 
 ---
 
